--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,12 +121,12 @@ jobs:
     runs-on: ubuntu-18.04
     container: 
       image: ${{ matrix.container }}
-    strategy:
+    strategy:g
       fail-fast: false
       matrix:
         container:
-          - alpine:3.14
-          - debian:buster-slim
+          - golang:1.16.5-buster
+          - debian:1.16.5-alpine3.14
         terraform:
           - 0.13.7
           - 0.14.11
@@ -134,11 +134,6 @@ jobs:
           - 1.0.0
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Go ${{ env.GO_DEFAULT_VERSION }}
-        if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
-        uses: actions/setup-go@v2.1.3
-        with:
-          go-version: ${{ env.GO_DEFAULT_VERSION }}
       - name: Download python bindings for given OS
         if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
         uses: actions/download-artifact@v2
