Added fast ci track

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [master, workflow-updates]
+    branches: [master]
     paths-ignore:
       - 'README.md'
   pull_request:
