--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -13,6 +13,37 @@ env:
   GO_DEFAULT_VERSION: 1.15
 
 jobs:
+  build:
+    needs: lint
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ env.PYTHON_DEFAULT_VERSION }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_DEFAULT_VERSION }}
+      - name: Set up Go ${{ env.GO_DEFAULT_VERSION }}
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: ${{ env.GO_DEFAULT_VERSION }}
+      - name: Install dependencies
+        run: |
+          make deps
+      - name: Build the provider
+        run: |
+          make build
+      - name: Upload python bindings
+        uses: actions/upload-artifact@v2
+        with:
+          name: py-terraform-provider-b2-${{ runner.os }}
+          path: python-bindings/dist/py-terraform-provider-b2
+          if-no-files-found: error
+          retention-days: 1
   test_linux:
     env:
       B2_TEST_APPLICATION_KEY: ${{ secrets.B2_TEST_APPLICATION_KEY }}
