--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -48,10 +48,6 @@ jobs:
     runs-on: ubuntu-18.04
     container: 
       image: ${{ matrix.container }}
-      env:
-        B2_TEST_APPLICATION_KEY: ${{ secrets.B2_TEST_APPLICATION_KEY }}
-        B2_TEST_APPLICATION_KEY_ID: ${{ secrets.B2_TEST_APPLICATION_KEY_ID }}
-        NOPYBINDINGS: 1 # do not build python buildings
     strategy:
       fail-fast: false
       matrix:
@@ -69,6 +65,10 @@ jobs:
         run: go version
       - name: Download python bindings for given OS
         uses: actions/download-artifact@v2
+        if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
+        env:
+          B2_TEST_APPLICATION_KEY: ${{ secrets.B2_TEST_APPLICATION_KEY }}
+          B2_TEST_APPLICATION_KEY_ID: ${{ secrets.B2_TEST_APPLICATION_KEY_ID }}
         with:
           name: py-terraform-provider-b2-${{ runner.os }}
           path: python-bindings/dist/
@@ -77,5 +77,7 @@ jobs:
         timeout-minutes: 120
         env:
           TF_ACC_TERRAFORM_VERSION: ${{ matrix.terraform }}
+          B2_TEST_APPLICATION_KEY: ${{ secrets.B2_TEST_APPLICATION_KEY }}
+          B2_TEST_APPLICATION_KEY_ID: ${{ secrets.B2_TEST_APPLICATION_KEY_ID }}
         run: |
           make testacc
