--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -65,8 +65,9 @@ jobs:
           - 1.0.0
     steps:
       - uses: actions/checkout@v2
-      - name: Check golang version
-        run: go version
+      - name: Add software dependencies
+        if: ${{ matrix.container == 'golang:1.16.5-alpine3.14' }}
+        run: apk add make
       - name: Download python bindings for given OS
         uses: actions/download-artifact@v2
         if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
