--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -67,7 +67,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Add software dependencies
         if: ${{ matrix.container == 'golang:1.16.5-alpine3.14' }}
-        run: apk add make
+        run: apk add make gcc
       - name: Download python bindings for given OS
         uses: actions/download-artifact@v2
         if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
