--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -36,9 +36,6 @@ jobs:
       - name: Build the provider
         run: |
           make build
-      - name: check library dependencies
-        run: |
-          ldd python-bindings/dist/py-terraform-provider-b2
       - name: Upload python bindings
         uses: actions/upload-artifact@v2
         with:
@@ -74,20 +71,15 @@ jobs:
       - name: Download python bindings for given OS
         uses: actions/download-artifact@v2
         if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
-        env:
-          B2_TEST_APPLICATION_KEY: ${{ secrets.B2_TEST_APPLICATION_KEY }}
-          B2_TEST_APPLICATION_KEY_ID: ${{ secrets.B2_TEST_APPLICATION_KEY_ID }}
         with:
           name: py-terraform-provider-b2-${{ runner.os }}
           path: python-bindings/dist/
-      - name: Chech library linking
-        run: ldd python-bindings/dist/py-terraform-provider-b2-${{ runner.os }}
+      - name: check library content
+        run: ls -la python-bindings/dist/
       - name: Run acceptance tests
         if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
         timeout-minutes: 120
         env:
           TF_ACC_TERRAFORM_VERSION: ${{ matrix.terraform }}
-          B2_TEST_APPLICATION_KEY: ${{ secrets.B2_TEST_APPLICATION_KEY }}
-          B2_TEST_APPLICATION_KEY_ID: ${{ secrets.B2_TEST_APPLICATION_KEY_ID }}
         run: |
           make testacc
