--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -20,16 +20,14 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
+    container: 
+      image: golang:${{ env.GO_DEFAULT_VERSION }}-buster
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ env.PYTHON_DEFAULT_VERSION }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ env.PYTHON_DEFAULT_VERSION }}
-      - name: Set up Go ${{ env.GO_DEFAULT_VERSION }}
-        uses: actions/setup-go@v2.1.3
-        with:
-          go-version: ${{ env.GO_DEFAULT_VERSION }}
       - name: Install dependencies
         run: |
           make deps
@@ -56,8 +54,8 @@ jobs:
       fail-fast: false
       matrix:
         container:
-          - golang:1.16.5-buster
-          - golang:1.16.5-alpine3.14
+          - golang:1.15-buster
+          - golang:1.15-alpine3.14
         terraform:
           - 0.13.7
           - 0.14.11
