--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -15,13 +15,12 @@ env:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    container: "golang:1.15-buster"
     strategy:
       fail-fast: false
       matrix:
         os:
           - ubuntu-20.04
-    container: 
-      image: golang:${{ env.GO_DEFAULT_VERSION }}-buster
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ env.PYTHON_DEFAULT_VERSION }}
