--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -14,13 +14,13 @@ env:
 
 jobs:
   build_linux:
-    runs-on: ubuntu-20.04
+    runs-on: "ubuntu-20.04"
     container: "python:3.9-buster"
     strategy:
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
-      - run |
+      - run: |
           cd /usr/local && \
           wget -q https://golang.org/dl/go1.16.5.linux-amd64.tar.gz && \
           tar xzf go1.16.5.linux-amd64.tar.gz && \
