--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -14,13 +14,14 @@ env:
 
 jobs:
   build_linux:
-    runs-on: "ubuntu-20.04"
+    runs-on: ubuntu-20.04
     container: "python:3.9-buster"
     strategy:
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
-      - run: |
+      - name: Configure environment
+        run: |
           cd /usr/local && \
           wget -q https://golang.org/dl/go1.16.5.linux-amd64.tar.gz && \
           tar xzf go1.16.5.linux-amd64.tar.gz && \
@@ -57,7 +58,6 @@ jobs:
         container:
           - golang:1.15-alpine3.14
         terraform:
-          - 0.15.4
           - 1.0.0
     steps:
       - uses: actions/checkout@v2
