--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -21,6 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Configure environment
+        shell: bash
         run: |
             cd /usr/local && \
             wget -q https://golang.org/dl/go1.16.5.linux-amd64.tar.gz && \
@@ -30,9 +31,11 @@ jobs:
             echo 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' >> /root/.bashrc && \
             source /root/.bashrc
       - name: Install dependencies
+        shell: bash
         run: |
           make deps
       - name: Build the provider
+        shell: bash
         run: |
           make build
       - name: Upload python bindings
