--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -31,7 +31,7 @@ jobs:
             tar xzf go${{ env.GO_DEFAULT_VERSION }}.linux-amd64.tar.gz && \
             rm go${{ env.GO_DEFAULT_VERSION }}.linux-amd64.tar.gz && mkdir /root/go && \
             echo 'export GOPATH="/root/go"' >> /root/.bashrc && \
-            echo 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' >> /root/.bashrc && \
+            echo 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' >> /root/.bashrc
       - name: Install dependencies
         run: |
             make deps && ls -la /root/go/bin
