--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -58,8 +58,8 @@ jobs:
       fail-fast: false
       matrix:
         container:
-          - golang:${{ env.GO_DEFAULT_VERSION }}-alpine3.14
-          - golang:${{ env.GO_DEFAULT_VERSION }}-buster
+          - golang:1.15.13-alpine3.14
+          - golang:1.15.13-buster
         terraform:
           - 1.0.0
     steps:
