--- a/.github/workflows/fast-ci.yml
+++ b/.github/workflows/fast-ci.yml
@@ -12,10 +12,6 @@ env:
   PYTHON_DEFAULT_VERSION: 3.9
   GO_DEFAULT_VERSION: 1.15.13
 
-defaults:
-  run:
-    shell: bash -l {0}
-
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -30,14 +26,12 @@ jobs:
             wget -q https://golang.org/dl/go${{ env.GO_DEFAULT_VERSION }}.linux-amd64.tar.gz && \
             tar xzf go${{ env.GO_DEFAULT_VERSION }}.linux-amd64.tar.gz && \
             rm go${{ env.GO_DEFAULT_VERSION }}.linux-amd64.tar.gz && mkdir /root/go && \
-            echo 'export GOPATH="/root/go"' >> /root/.bashrc && \
-            echo 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' >> /root/.bashrc
+            echo 'export GOPATH="/root/go"' >> /etc/profile && \
+            echo 'export PATH="/root/go/bin:/usr/local/go/bin:$PATH"' >> /etc/profile
       - name: Install dependencies
-        run: |
-            source /root/.bashrc && make deps
+        run: make deps
       - name: Build provider
-        run: |
-            source /root/.bashrc && make build
+        run: make build
       - name: Upload python bindings
         uses: actions/upload-artifact@v2
         with:
@@ -66,8 +60,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Add software dependencies
         if: ${{ matrix.container == 'golang:1.15-alpine3.14' }}
-        shell: sh
-        run: apk add make gcc musl-dev bash
+        run: apk add make gcc musl-dev
       - name: Download python bindings for given OS
         uses: actions/download-artifact@v2
         if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
