--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [master]
+    branches: [workflow-updates]
     paths-ignore:
       - 'README.md'
   pull_request:
@@ -10,7 +10,7 @@ on:
 
 env:
   PYTHON_DEFAULT_VERSION: 3.9
-  GO_DEFAULT_VERSION: 1.15
+  GO_DEFAULT_VERSION: 1.15.13
 
 jobs:
   lint:
@@ -42,16 +42,41 @@ jobs:
         uses: zattoo/changelog@v1
         with:
           token: ${{ github.token }}
-  
-  build:
+
+  build_linux:
     needs: lint
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-20.04
+    container: "python:3.9-buster"
     strategy:
       fail-fast: false
-      matrix:
-        os:
-          - ubuntu-18.04
-          - macos-10.15
+    env:
+      PATH: /go/bin:/usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      GOPATH: /go
+    steps:
+      - uses: actions/checkout@v2
+      - name: Configure Linux environment
+        run: |
+          cd /usr/local && \
+          wget -q https://golang.org/dl/go${{ env.GO_DEFAULT_VERSION }}.linux-amd64.tar.gz && \
+          tar xzf go${{ env.GO_DEFAULT_VERSION }}.linux-amd64.tar.gz && \
+          rm go${{ env.GO_DEFAULT_VERSION }}.linux-amd64.tar.gz && mkdir /go
+      - name: Install dependencies
+        run: make deps
+      - name: Build provider
+        run: make build
+      - name: Upload python bindings
+        uses: actions/upload-artifact@v2
+        with:
+          name: py-terraform-provider-b2-${{ runner.os }}
+          path: python-bindings/dist/py-terraform-provider-b2
+          if-no-files-found: error
+          retention-days: 1
+  
+  build_mac:
+    needs: lint
+    runs-on: macos-10.15
+    strategy:
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ env.PYTHON_DEFAULT_VERSION }}
@@ -77,7 +102,7 @@ jobs:
           retention-days: 1
   
   test_macos:
-    needs: build
+    needs: build_mac
     env:
       B2_TEST_APPLICATION_KEY: ${{ secrets.B2_TEST_APPLICATION_KEY }}
       B2_TEST_APPLICATION_KEY_ID: ${{ secrets.B2_TEST_APPLICATION_KEY_ID }}
@@ -113,20 +138,20 @@ jobs:
           make testacc
   
   test_linux:
-    needs: build
+    needs: build_linux
+    runs-on: ubuntu-20.04
     env:
       B2_TEST_APPLICATION_KEY: ${{ secrets.B2_TEST_APPLICATION_KEY }}
       B2_TEST_APPLICATION_KEY_ID: ${{ secrets.B2_TEST_APPLICATION_KEY_ID }}
       NOPYBINDINGS: 1 # do not build python buildings
-    runs-on: ubuntu-18.04
     container: 
       image: ${{ matrix.container }}
     strategy:
       fail-fast: false
       matrix:
         container:
-          - golang:1.16.5-buster
-          - debian:1.16.5-alpine3.14
+          - golang:1.15.13-alpine3.14
+          - golang:1.15.13-buster
         terraform:
           - 0.13.7
           - 0.14.11
@@ -134,9 +159,12 @@ jobs:
           - 1.0.0
     steps:
       - uses: actions/checkout@v2
+      - name: Add software dependencies
+        if: ${{ matrix.container == 'golang:1.15.13-alpine3.14' }}
+        run: apk add make gcc musl-dev
       - name: Download python bindings for given OS
-        if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
         uses: actions/download-artifact@v2
+        if: ${{ env.B2_TEST_APPLICATION_KEY != '' && env.B2_TEST_APPLICATION_KEY_ID != '' }}
         with:
           name: py-terraform-provider-b2-${{ runner.os }}
           path: python-bindings/dist/
